@@ -8,6 +8,8 @@ Version 1.8.9
        was cancelled. (Stefan)
 - BUG: Issue #669: Repobrowser closes when escape is
        pressed to cancel an edit. (Stefan)
+- BUG: Issue #672: merging from progress dialog does
+       not record merge info. (Stefan)
 
 Version 1.8.8
 - BUG: Issue #640: Restore after commit - Unchecked
